syntax = "proto3";


message StatusOk {
  string status = 1;
}